css/style.css
* {
    font-family: 'Sulphur Point', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    /*margin: 0;*/
    padding: 0;
    box-sizing: border-box;
    color: #777;
}

body {
    margin-top: 0
}

.navbar {
    position: absolute;
    list-style-type: none;
    overflow: hidden;
    width: 100%;
    height: auto;
    z-index: 1;
    margin: 0
}

.navbar li {
    float: right;
}

.navbar li a {
    display: block;
    color: #111111;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 3vh;
}

.navbar li a:hover {
    background-color: #111;
    color: #ffffff;
    box-shadow: 1px 1px 1px 0px  rgba(0,0,0,0.3);
    /*border-radius: 4px;*/
    transition: 0.3s;
}

#main-container {
    margin-left: auto;
    margin-right: auto;
    /*width: 90%;*/
}

.grid-container {
    overflow: auto;
    display: grid;
    position: relative;
    grid-template-rows: 1fr;
    width: 99vw;
    height: 99vh;
    /*border: 1px solid black;*/
}

.grid-container .greeting {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: #000;
    font-size: 8.5vh;
}

.hint-to-scroll-down {
    position: relative;
    text-align: center;
    bottom: 7rem;
    font-size: 4vh;
}
.page-header {
    display: flex;
    position: relative;
    font-size: 6vh;
    text-align: center;
    justify-content: center;
    align-items: center;
    height: 15%;
    color: black;
}

.grid-cards-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    grid-gap: 15px;
    align-items: stretch;
    margin-left: auto;
    margin-right: auto;
    width: 90%;
    /*border: 1px solid red;*/
}

.grid-cards-container > article {
    border-radius: 10px;
}

article:hover {
    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
    transition: 0.3s;
}

.grid-cards-container > article img {
    max-width: 50%;
    display: block;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 5px;
}

.mobdev {
    filter: grayscale(100%) invert(1);
    /*background-color: #111111;*/
}

.text {
    padding: 0 20px 20px;
    align-items: stretch;
}

h2 {
    color: #111111;
    /*font-size: 2vw;*/
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
    padding: 5px;
}

.arrow {
    position: relative;
    bottom: 3.5rem;
    left: 50%;
    margin-left:-20px;
    width: 3vw;
    height: 5vw;
    background-image: url("../images/arrow.png");
    background-size: contain;
    justify-content: center;
}

.bounce {
    animation: bounce 3s infinite;
}

@keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
        transform: translateY(0);
    }
    40% {
        transform: translateY(-40px);
    }
    60% {
        transform: translateY(-15px);
    }
}

@media screen and (max-width: 768px) {
    .arrow {
        margin-left: 0;
    }
}

